--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.9.4",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.2.1",
     "html-withimg-loader": "^0.1.16",
